@@ -1,6 +1,6 @@
 {"name": "Open_vSwitch",
  "version": "6.4.0",
- "cksum": "3757343995 15531",
+ "cksum": "923041702 15687",
  "tables": {
    "Open_vSwitch": {
      "columns": {
@@ -299,6 +299,10 @@
                           "minInteger": 1,
                           "maxInteger": 4095},
                   "min": 0, "max": 1}},
+       "statistics": {
+         "type": {"key": "string", "value": "integer",
+                  "min": 0, "max": "unlimited"},
+         "ephemeral": true},
        "external_ids": {
          "type": {"key": "string", "value": "string",
                   "min": 0, "max": "unlimited"}}}},
