@@ -11,6 +11,8 @@ post-v1.3.0
        - Added ability to match on TTL in IPv4 and IPv6 through NXM.
        - Added ability to modify ECN bits in IPv4.
        - Added ability to modify TTL in IPv4.
+    - ovs-vswitchd:
+       - Track packet and byte statistics sent on mirrors.
     - ovs-appctl:
       - New "fdb/flush" command to flush bridge's MAC learning table.
     - ovs-test:
